# Saving-Dr.-Elara

./: CMakeLists.txt  README.md
PA1_template/src/: Convolution.cpp  Convolution.h  DecodeMessage.cpp  EdgeDetector.cpp  EdgeDetector.h  ImageMatrix.cpp  ImageMatrix.h  ImageProcessor.cpp  ImageSharpening.cpp  ImageSharpening.h  main.cpp
